MNT: enable workflow-dispatch on top-level job

--- a/.github/workflows/python-standard.yml
+++ b/.github/workflows/python-standard.yml
@@ -52,6 +52,13 @@ on:
         required: false
         default: false
         type: boolean
+  workflow_dispatch:
+    inputs:
+      debug_enabled:
+        type: boolean
+        description: 'Run the build with tmate debugging enabled'
+        required: false
+        default: false
 
 jobs:
   pre-commit:
