--- a/.github/workflows/python-conda-test.yml
+++ b/.github/workflows/python-conda-test.yml
@@ -136,13 +136,13 @@ jobs:
         cat ~/.condarc
         echo "---------------------------"
 
-    - name: Install boa for mambabuild
+    - name: Install rattler-build for mambabuild
       run: |
         # conda-verify has not been released on conda-forge since 2019 and has no py3.12 build
         if [ "${{ inputs.python-version }}" == "3.12" ]; then
-          micromamba install boa "python=${{ inputs.python-version }}"
+          micromamba install rattler-build "python=${{ inputs.python-version }}"
         else
-          micromamba install boa conda-verify "python=${{ inputs.python-version }}"
+          micromamba install rattler-build conda-verify "python=${{ inputs.python-version }}"
         fi
         micromamba info
 
